syntax = "proto3";

option csharp_namespace = "GrpcChat";

package chat;

service GrpcChat{
	rpc Join(stream Message) returns (stream Message);
	rpc MessageHistory(Void) returns (stream Message);
}

message Void {
}

message Message {
	string user = 1;
	string text = 2;
}
