syntax = "proto3";

option csharp_namespace = "GrpcChat";

package chat;

service ChatService{
	rpc Join(stream Message) returns (stream Message);
	rpc MessageHistory(LookUp) returns (stream Message);
	rpc GetChatRooms(LookUp) returns (ChatRooms);
}

message LookUp {
}

message Message {
	string user = 1;
	string text = 2;
	string chatRoomId = 4;
}

message ChatInfo{
	string id = 2;
	string Name = 1;
}

message Join {
	string roomId = 1;
	string user = 2;
}

message ChatRooms{
	repeated ChatInfo chatRooms = 1;
}
